--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,131 @@
-absl-py==0.10.0
-aio-pika==6.4.1
-aiormq==3.2.3
-astor==0.8.1
-bert-dp @ git+https://github.com/deepmipt/bert.git@741d9bed9d52c6a9409ca27d8bf284615645618b
+absl-py==0.9.0
+asgiref==3.2.10
+astunparse==1.6.3
+attrs==19.3.0
+backcall==0.2.0
+bleach==3.1.5
+cachetools==4.1.1
+catboost==0.24.1
 certifi==2020.6.20
-cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
-cryptography==3.1.1
-Cython==0.29.14
+cmake==3.18.2.post1
+colorama==0.4.3
+cycler==0.10.0
 DAWG-Python==0.7.2
-deeppavlov==0.12.1
+decorator==4.4.2
+defusedxml==0.6.0
+Django==3.1
+dlib==19.21.0
 docopt==0.6.2
-fastapi==0.47.1
-gast==0.2.2
+entrypoints==0.3
+face-recognition==1.3.0
+face-recognition-models==0.3.0
+future==0.18.2
+gast==0.3.3
+google-auth==1.18.0
+google-auth-oauthlib==0.4.1
 google-pasta==0.2.0
-grpcio==1.32.0
-h11==0.9.0
+graphviz==0.14.1
+grpcio==1.30.0
 h5py==2.10.0
-idna==2.8
-importlib-metadata==2.0.0
-joblib==0.16.0
-Keras-Applications==1.0.8
+idna==2.10
+imageio==2.8.0
+ipykernel==5.3.0
+ipython==7.16.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.17.1
+Jinja2==2.11.2
+joblib==0.15.1
+json5==0.9.5
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.5
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+jupyter-http-over-ws==0.0.8
+jupyterlab==2.2.8
+jupyterlab-server==1.2.0
 Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+llvmlite==0.34.0
 Markdown==3.2.2
-multidict==4.7.6
+MarkupSafe==1.1.1
+matplotlib==3.2.2
+mistune==0.8.4
 mysqlclient==2.0.1
-nltk==3.4.5
-numpy==1.18.0
-opt-einsum==3.3.0
-overrides==2.7.0
-pamqp==2.3.0
-pandas==0.25.3
-protobuf==3.13.0
-pycparser==2.20
-pydantic==1.3
-pymorphy2==0.8
-pymorphy2-dicts==2.4.393442.3710985
+nbconvert==5.6.1
+nbformat==5.0.7
+networkx==2.4
+nodejs==0.1.1
+notebook==6.0.3
+npm==0.1.1
+numba==0.51.2
+numpy==1.18.5
+oauthlib==3.1.0
+opencv-python==4.4.0.42
+opt-einsum==3.2.1
+optional-django==0.1.0
+packaging==20.4
+pandas==1.1.0
+pandocfilters==1.4.2
+parso==0.7.0
+pickleshare==0.7.5
+Pillow==7.2.0
+plotly==4.9.0
+prometheus-client==0.8.0
+prompt-toolkit==3.0.5
+protobuf==3.12.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+Pygments==2.6.1
+pymorphy2==0.9
 pymorphy2-dicts-ru==2.4.404381.4453942
-pyOpenSSL==19.1.0
-pyTelegramBotAPI==3.6.7
+PyMySQL==0.10.0
+pyparsing==2.4.7
+pyrsistent==0.16.0
 python-dateutil==2.8.1
-pytz==2019.1
-requests==2.22.0
-ruamel.yaml==0.15.100
-rusenttokenize==0.0.5
-sacremoses==0.0.35
-scikit-learn==0.21.2
+pytz==2020.1
+PyWavelets==1.1.1
+pywin32==228
+pywinpty==0.5.7
+PyYAML==5.3.1
+pyzmq==19.0.1
+qtconsole==4.7.5
+QtPy==1.9.0
+requests==2.24.0
+requests-oauthlib==1.3.0
+retrying==1.3.3
+rsa==4.6
+scikit-image==0.17.2
+scikit-learn==0.23.1
 scipy==1.4.1
+Send2Trash==1.5.0
 six==1.15.0
-SQLAlchemy==1.3.19
-starlette==0.12.9
-tensorboard==1.15.0
-tensorflow-estimator==1.15.1
-tensorflow-gpu==1.15.2
+sklearn==0.0
+SQLAlchemy==1.3.18
+sqlparse==0.3.1
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.2.0
+tensorflow-estimator==2.2.0
+tensorflow-gpu==2.3.0
+tensorflow-gpu-estimator==2.3.0
 termcolor==1.1.0
-tqdm==4.41.1
-typing-extensions==3.7.4.3
-urllib3==1.25.10
-uvicorn==0.11.7
-websockets==8.1
+terminado==0.8.3
+testpath==0.4.4
+threadpoolctl==2.1.0
+tifffile==2020.6.3
+torch==1.5.1
+torchvision==0.6.1
+tornado==6.0.4
+tqdm==4.47.0
+traitlets==4.3.3
+urllib3==1.25.9
+wcwidth==0.2.5
+webencodings==0.5.1
 Werkzeug==1.0.1
+widgetsnbextension==3.5.1
 wrapt==1.12.1
-yarl==1.6.0
-zipp==3.2.0
+xgboost==1.2.0
